DTG-432: Fixed link color contrast.

--- a/components/41-organisms/search-block/_search-block.scss
+++ b/components/41-organisms/search-block/_search-block.scss
@@ -19,6 +19,10 @@
     @extend %h4;
   }
 
+  a {
+    @include theme('color', 'color-primary--darken-1', 'search-block-link-color');
+  }
+
   ul {
     margin: 0 0 2rem;
     list-style-type: none;
